# ai-engineering-learning-journey

./: .gitignore  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt
docs/: DOCUMENTATION.md  LIST-OPENAI-MODELS.md
notebooks/: test.ipynb
src/: responseHelper.py
src/course-01-Working-with-the-OpenAI-API/chapter-02-Prompting-OpenAI-Models/: ex-01-find-and-replace.py  ex-02-text-summarization.py  ex-03-calculating-the-cost.py  ex-04-content-generation.py  ex-05-generate-a-product-discription.py  ex-06-zero-shot-prompting-with-reviews.py  ex-07-one-shot-prompting.py  ex-08-few-shot-prompting.py
src/course-01-Working-with-the-OpenAI-API/chapter-03-Building-conservations-with-the-OpenAI-API/: ex-01-utilizing-systems-messages.py  ex-02-adding-guardrails.py  ex-03-adding assistant-messages.py  ex-04-more-assistant-messages.py  ex-05-creating-a-conversation-history.py  ex-06-creating-an-AI-chatbot.py
src/course-02-Prompt-Engineering-with-the-OpenAI-API/chapter-01-Introducing-to-Propmt-Engineering-Best-Practices/: ex-01-openai-api-message-role.py  ex-02-creating-the-get-response-function copy.py  ex-02-creating-the-get-response-function.py  ex-03-using-delimited-prompts-with-f-strings.py  ex-04-building-specific-and-precise-prompts.py  ex-05-generating-a-table.py  ex-06-customizing-output-format.py  ex-07-using-conditional-prompts.py
src/my_project/: test.py
src/openAI-codes/: list-models-md.py  list-models.py  retrieve-model.py
src/project-01-Planning-a-trip-to-Paris-with-the-OpenAI-API/: chatbot-paris.py
(+29 files in other folders)
